feat: route auth

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="utf-8">
+    <meta http-equiv="Cache-Control" content="no-cache" />
+    <meta http-equiv="Pragma" content="no-cache" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0, viewport-fit=cover">
     <title>MyRewards 發票載具</title>
     <script type="text/javascript">
