other: remove fetch request

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Pragma" content="no-cache" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0, viewport-fit=cover">
     <title>MyRewards 發票載具</title>
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
         (function(e, a) {
             if (!a.__SV) {
                 var b = window;
@@ -56,7 +56,7 @@
                 c.parentNode.insertBefore(b, c)
             }
         })(document, window.mixpanel || []);
-    </script>
+    </script> -->
 </head>
 
 <body>
